--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
   --pink: #de3f8c;
   --bg: #000000;
-  --shadow: 0 2px 2px rgb(0, 0, 0 / 0.5);
+  --shadow: 0 2px 2px rgb(0 0 0 / 0.5);
 }
 
 body {
@@ -10,9 +10,21 @@ body {
   min-height: 2000px;
 }
 
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(img/bg-2.jpg);
+  z-index: -1;
+  filter: grayscale();
+}
+
 .hero {
+  position: relative;
   min-height: 100vh;
-  background-color: var(--bg);
 }
 
 .hero h1 {
@@ -33,6 +45,11 @@ body {
   background-color: white;
 }
 
+.hero h1,
+.hero h4,
+.hero p {
+  text-shadow: var(--shadow);
+}
 .hero a:hover {
   color: white;
   background-color: var(--pink);
