--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body {
   width: 100%;
   height: 100%;
   background-image: url(img/bg-2.jpg);
+  background-size: cover;
+  background-position: center;
   z-index: -1;
   filter: grayscale();
 }
@@ -56,6 +58,17 @@ body {
   background-color: var(--pink);
 }
 
+.mynavbar .navbar-brand,
+.mynavbar .offcanvas-title {
+  font-family: "Sacramento", cursive;
+  font-size: 2.4rem;
+  font-weight: bold;
+}
+
+.mynavbar .nav-link {
+  text-transform: uppercase;
+}
+
 /* MEDIA QUERY */
 /* Laptop */
 @media (max-width: 992px) {
@@ -75,6 +88,11 @@ body {
   #simply-countdown > .simply-section {
     padding: 60px;
     margin: 5px;
+  }
+
+  .mynavbar .nav-link {
+    font-size: 2rem;
+    text-align: center;
   }
 }
 
